--- a/upsell/index.html
+++ b/upsell/index.html
@@ -9,7 +9,6 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://sdk.mercadopago.com/js/v2"></script>
   <style>
     :root { --brand: #22c55e; }
     body{ font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial,'Noto Sans','Liberation Sans',sans-serif; }
@@ -46,7 +45,9 @@
   <section id="oferta" class="py-10">
     <div class="container mx-auto px-4 grid lg:grid-cols-2 gap-8 items-center">
       <div class="rounded-2xl overflow-hidden shadow-soft border border-slate-200 bg-white">
-        <img src="https://dietapronta.online/receitas.jpg" alt="Receitas saudáveis" class="w-full h-72 object-cover"/>
+        <img id="upsellImage" src="https://dietapronta.online/images/receitas.jpg" 
+             alt="Receitas saudáveis" class="w-full h-72 object-cover"
+             onerror="this.src='https://images.unsplash.com/photo-1512058564366-18510be2db19?q=80&w=1200&auto=format&fit=crop';"/>
         <div class="p-6">
           <h2 class="text-2xl font-extrabold">200 Receitas Exclusivas 🍽️</h2>
           <p class="mt-3 text-slate-700">
@@ -61,23 +62,28 @@
         </div>
       </div>
 
-      <aside class="p-6 rounded-2xl bg-white border border-slate-200 shadow-soft text-center">
+      <aside class="p-6 rounded-2xl bg-white border border-slate-200 shadow-soft">
         <div class="text-sm text-slate-500">Oferta Limitada</div>
         <h3 class="text-2xl font-extrabold mt-1 text-emerald-600">De R$ 149,90 por apenas R$ 9,90!</h3>
         <p class="mt-3 text-slate-700">
           Você nunca mais verá essa oferta novamente. Essa é a sua chance de transformar sua alimentação com praticidade e sabor — gastando menos que um café! ☕
         </p>
-
-        <div class="mt-4 p-4 bg-emerald-50 border border-emerald-200 rounded-xl text-emerald-900 text-sm">
+        <div class="mt-4 p-4 bg-emerald-50 border border-emerald-200 rounded-xl text-emerald-900">
           <strong>⚠️ Atenção:</strong> essa condição especial aparece <u>somente uma vez</u>.  
           Se sair desta página, ela desaparecerá para sempre!
         </div>
 
-        <!-- Checkout container -->
-        <div id="mp-checkout" class="mt-6"></div>
-        <button id="btnPagamento" class="mt-4 w-full rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold text-lg hover:bg-emerald-600 transition">
-          Quero minhas 200 receitas por R$ 9,90 ➜
-        </button>
+        <!-- Botão verde principal -->
+        <a id="btnPagamento" href="/pagamento/?produto=receitas200&valor=9.90" 
+           class="mt-6 block text-center rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold text-lg hover:bg-emerald-600 transition">
+           Quero minhas 200 receitas por R$ 9,90 ➜
+        </a>
+
+        <!-- Botão vermelho secundário -->
+        <a href="https://dietapronta.online/approved"
+           class="mt-3 block text-center rounded-xl px-5 py-3 bg-red-500 text-white font-semibold text-lg hover:bg-red-600 transition">
+           Vou ficar somente com a dieta ✖
+        </a>
 
         <div class="mt-4 text-xs text-slate-500 text-center">
           Acesso imediato • Conteúdo digital • Garantia de satisfação
@@ -103,50 +109,22 @@
   <script>
   document.addEventListener("DOMContentLoaded", function(){
     function $(id){ return document.getElementById(id); }
-    const MP_PUBLIC_KEY = "APP_USR-87cc4830-2ac4-410d-82b8-f295612a75b0";
-    const MP_ENDPOINT_UPSELL = "https://dietapronta.online/api/mp-preference-upsell";
-
     const ref   = localStorage.getItem('mp_external_ref') || '';
     const nome  = localStorage.getItem('lead_nome') || '';
     const email = localStorage.getItem('lead_email') || '';
     const whats = localStorage.getItem('lead_whats') || '';
 
+    // Gera URL de pagamento para upsell
+    const payUrl = new URL('/pagamento/', location.origin);
+    payUrl.searchParams.set('produto', 'receitas200');
+    payUrl.searchParams.set('valor', '9.90');
+    if(ref) payUrl.searchParams.set('ref', ref);
+    if(nome) payUrl.searchParams.set('nome', nome);
+    if(email) payUrl.searchParams.set('email', email);
+    if(whats) payUrl.searchParams.set('whats', whats);
+
+    if($('btnPagamento')) $('btnPagamento').setAttribute('href', payUrl.toString());
     if($('year')) $('year').textContent = (new Date()).getFullYear();
-
-    // Clique no botão inicia o pagamento
-    $('btnPagamento').addEventListener('click', async () => {
-      $('btnPagamento').disabled = true;
-      $('btnPagamento').textContent = "Gerando pagamento...";
-      try {
-        const resp = await fetch(MP_ENDPOINT_UPSELL, {
-          method: "POST",
-          headers: { "Content-Type":"application/json" },
-          body: JSON.stringify({
-            valor: 9.90,
-            titulo: "200 Receitas Saudáveis",
-            external_reference: ref,
-            customer_name: nome,
-            customer_email: email,
-            customer_whatsapp: whats
-          })
-        });
-        const data = await resp.json();
-        if(!data || !data.id) throw new Error("Falha ao criar preferência.");
-
-        const mp = new MercadoPago(MP_PUBLIC_KEY, { locale: "pt-BR" });
-        mp.checkout({
-          preference: { id: data.id },
-          autoOpen: true,
-          render: { container: "#mp-checkout", label: "Pagar R$ 9,90" }
-        });
-
-        $('btnPagamento').textContent = "Abrindo pagamento...";
-      } catch(e){
-        console.error("Erro ao gerar pagamento:", e);
-        $('btnPagamento').textContent = "Erro, tente novamente";
-      }
-      $('btnPagamento').disabled = false;
-    });
   });
   </script>
 </body>
