--- a/upsell/index.html
+++ b/upsell/index.html
@@ -9,15 +9,23 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://sdk.mercadopago.com/js/v2"></script>
   <style>
     :root { --brand: #22c55e; }
     body{ font-family:'Inter',system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial,'Noto Sans','Liberation Sans',sans-serif; }
     .container{ max-width:980px; }
     .shadow-soft{ box-shadow:0 10px 25px rgba(2,6,23,.08); }
+    #countdownBox.pulse {
+      animation: pulse 1s infinite;
+    }
+    @keyframes pulse {
+      0% { background-color: #fef2f2; color: #b91c1c; }
+      50% { background-color: #fee2e2; color: #dc2626; }
+      100% { background-color: #fef2f2; color: #b91c1c; }
+    }
   </style>
 </head>
 <body class="bg-slate-50 text-slate-900">
+
   <!-- Header -->
   <header class="bg-white border-b border-slate-200 sticky top-0 z-40">
     <div class="container mx-auto px-4 py-3 flex items-center justify-between">
@@ -32,12 +40,17 @@
   </header>
 
   <!-- Hero -->
-  <section class="bg-gradient-to-b from-white to-slate-100">
-    <div class="container mx-auto px-4 py-10 text-center">
-      <h1 class="text-3xl md:text-5xl font-extrabold leading-tight text-emerald-600">🎉 Parabéns! Seu pagamento foi aprovado!</h1>
+  <section class="bg-gradient-to-b from-white to-slate-100 text-center">
+    <div class="container mx-auto px-4 py-10">
+      <h1 class="text-3xl md:text-5xl font-extrabold text-emerald-600">🎉 Parabéns! Seu pagamento foi aprovado!</h1>
       <p class="mt-4 text-lg text-slate-700 max-w-2xl mx-auto">
         E pra te ajudar a ter <strong>resultados ainda mais rápidos e deliciosos</strong>, preparamos uma oportunidade <strong>única e exclusiva</strong> — disponível apenas agora!
       </p>
+
+      <!-- Countdown -->
+      <div id="countdownBox" class="mt-6 inline-block bg-emerald-100 text-emerald-800 font-bold px-6 py-3 rounded-xl text-lg shadow-soft border border-emerald-200">
+        ⏰ Oferta expira em: <span id="countdown">05:00</span>
+      </div>
     </div>
   </section>
 
@@ -45,7 +58,9 @@
   <section id="oferta" class="py-10">
     <div class="container mx-auto px-4 grid lg:grid-cols-2 gap-8 items-center">
       <div class="rounded-2xl overflow-hidden shadow-soft border border-slate-200 bg-white">
-        <img src="https://dietapronta.online/receitas.jpg" alt="Receitas saudáveis" class="w-full h-72 object-cover"/>
+        <img id="upsellImage" src="https://dietapronta.online/images/receitas.jpg" 
+             alt="Receitas saudáveis" class="w-full h-72 object-cover"
+             onerror="this.src='https://images.unsplash.com/photo-1512058564366-18510be2db19?q=80&w=1200&auto=format&fit=crop';"/>
         <div class="p-6">
           <h2 class="text-2xl font-extrabold">200 Receitas Exclusivas 🍽️</h2>
           <p class="mt-3 text-slate-700">
@@ -60,36 +75,35 @@
         </div>
       </div>
 
-      <aside class="p-6 rounded-2xl bg-white border border-slate-200 shadow-soft text-center">
+      <aside class="p-6 rounded-2xl bg-white border border-slate-200 shadow-soft">
         <div class="text-sm text-slate-500">Oferta Limitada</div>
         <h3 class="text-2xl font-extrabold mt-1 text-emerald-600">De R$ 149,90 por apenas R$ 9,90!</h3>
         <p class="mt-3 text-slate-700">
-          Essa é a sua chance de transformar sua alimentação com praticidade e sabor — gastando menos que um café! ☕
+          Essa é uma oferta única — disponível apenas nesta página.  
+          Se sair dela, o desconto será encerrado!
         </p>
-        <div class="mt-4 p-4 bg-emerald-50 border border-emerald-200 rounded-xl text-emerald-900 text-sm">
+
+        <div class="mt-4 p-4 bg-emerald-50 border border-emerald-200 rounded-xl text-emerald-900">
           <strong>⚠️ Atenção:</strong> essa condição especial aparece <u>somente uma vez</u>.  
-          Se sair desta página, ela desaparecerá para sempre!
+          Aproveite enquanto o cronômetro estiver ativo!
         </div>
 
-        <!-- Container para o checkout -->
-        <div id="mp-checkout" class="mt-6"></div>
-        <button id="btnPagamento" class="mt-4 w-full rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold text-lg hover:bg-emerald-600 transition">
-          Quero minhas 200 receitas por R$ 9,90 ➜
-        </button>
+        <!-- Botão principal -->
+        <a id="btnPagamento" href="/pagamento/?produto=receitas200&valor=9.90"
+           class="mt-6 block text-center rounded-xl px-5 py-3 bg-[var(--brand)] text-white font-semibold text-lg hover:bg-emerald-600 transition">
+           Quero minhas 200 receitas por R$ 9,90 ➜
+        </a>
+
+        <!-- Botão secundário -->
+        <a href="https://dietapronta.online/approved"
+           class="mt-3 block text-center rounded-xl px-5 py-3 bg-red-500 text-white font-semibold text-lg hover:bg-red-600 transition">
+           Vou ficar somente com a dieta ✖
+        </a>
 
         <div class="mt-4 text-xs text-slate-500 text-center">
           Acesso imediato • Conteúdo digital • Garantia de satisfação
         </div>
       </aside>
-    </div>
-
-    <!-- Prova social -->
-    <div class="container mx-auto mt-16 px-4 text-center">
-      <p class="text-sm uppercase text-emerald-600 font-semibold tracking-wide">Mais de 12.000 pessoas já aproveitaram</p>
-      <h4 class="text-2xl font-extrabold mt-2">Resultados reais, receitas reais 💚</h4>
-      <p class="mt-2 text-slate-600 max-w-2xl mx-auto">
-        Esse pacote foi criado com base no feedback dos nossos pacientes — pessoas comuns que conquistaram resultados incríveis sem abrir mão do prazer de comer bem.
-      </p>
     </div>
   </section>
 
@@ -97,62 +111,50 @@
     <p>© <span id="year"></span> Dieta Pronta Online. Todos os direitos reservados.</p>
   </footer>
 
-  <!-- SCRIPT FINAL -->
+  <!-- Script -->
   <script>
   document.addEventListener("DOMContentLoaded", function(){
     function $(id){ return document.getElementById(id); }
-    const MP_PUBLIC_KEY = "APP_USR-87cc4830-2ac4-410d-82b8-f295612a75b0";
-    const MP_ENDPOINT_UPSELL = "https://dietapronta.online/api/mp-preference-upsell";
+    const ref   = localStorage.getItem('mp_external_ref') || '';
+    const nome  = localStorage.getItem('lead_nome') || '';
+    const email = localStorage.getItem('lead_email') || '';
+    const whats = localStorage.getItem('lead_whats') || '';
 
-    // 🔹 Cria nova referência exclusiva para o upsell
-    const ref_upsell = "ref-upsell-" + Date.now() + "-" + Math.random().toString(36).slice(2,8);
-    try { localStorage.setItem("mp_upsell_ref", ref_upsell); } catch(e){}
+    // Gera URL do pagamento
+    const payUrl = new URL('/pagamento/', location.origin);
+    payUrl.searchParams.set('produto', 'receitas200');
+    payUrl.searchParams.set('valor', '9.90');
+    if(ref) payUrl.searchParams.set('ref', ref);
+    if(nome) payUrl.searchParams.set('nome', nome);
+    if(email) payUrl.searchParams.set('email', email);
+    if(whats) payUrl.searchParams.set('whats', whats);
+    $('btnPagamento').setAttribute('href', payUrl.toString());
 
-    // 🔹 Carrega dados do cliente da compra principal
-    const ref_principal = localStorage.getItem("mp_external_ref") || "";
-    const nome  = localStorage.getItem("lead_nome") || "";
-    const email = localStorage.getItem("lead_email") || "";
-    const whats = localStorage.getItem("lead_whats") || "";
+    if($('year')) $('year').textContent = (new Date()).getFullYear();
 
-    if($("year")) $("year").textContent = (new Date()).getFullYear();
+    // === Countdown ===
+    let timeLeft = 5 * 60; // 5 minutos
+    const countdownEl = $('countdown');
+    const countdownBox = $('countdownBox');
+    const btnPagamento = $('btnPagamento');
 
-    // ✅ Ao clicar, cria a preferência e abre o checkout box
-    $("btnPagamento").addEventListener("click", async () => {
-      $("btnPagamento").disabled = true;
-      $("btnPagamento").textContent = "Gerando pagamento...";
+    const timer = setInterval(() => {
+      const min = String(Math.floor(timeLeft / 60)).padStart(2, '0');
+      const sec = String(timeLeft % 60).padStart(2, '0');
+      countdownEl.textContent = `${min}:${sec}`;
+      
+      // Alerta visual nos últimos 30 segundos
+      if (timeLeft <= 30) countdownBox.classList.add("pulse");
 
-      try {
-        const resp = await fetch(MP_ENDPOINT_UPSELL, {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({
-            valor: 9.90,
-            titulo: "200 Receitas Saudáveis",
-            external_reference: ref_upsell, // ✅ NOVO REF ÚNICO
-            customer_name: nome,
-            customer_email: email,
-            customer_whatsapp: whats,
-            parent_ref: ref_principal // opcional para rastrear origem
-          })
-        });
-
-        const data = await resp.json();
-        if (!data || !data.id) throw new Error("Falha ao criar preferência.");
-
-        const mp = new MercadoPago(MP_PUBLIC_KEY, { locale: "pt-BR" });
-        mp.checkout({
-          preference: { id: data.id },
-          autoOpen: true,
-          render: { container: "#mp-checkout", label: "Pagar R$ 9,90" }
-        });
-
-        $("btnPagamento").textContent = "Abrindo pagamento...";
-      } catch (e) {
-        console.error("Erro ao gerar pagamento:", e);
-        $("btnPagamento").textContent = "Erro, tente novamente";
+      if (timeLeft <= 0) {
+        clearInterval(timer);
+        countdownEl.textContent = "00:00";
+        btnPagamento.textContent = "⏰ Oferta Expirada";
+        btnPagamento.classList.add("bg-gray-400", "cursor-not-allowed", "hover:bg-gray-400");
+        btnPagamento.removeAttribute("href");
       }
-      $("btnPagamento").disabled = false;
-    });
+      timeLeft--;
+    }, 1000);
   });
   </script>
 </body>
